SEBSP-119 and SEBSP-111 plus model generation